Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.2, 6.5.0 Beta2
-
577e1dea2 (dev), d15efae7e (dev), 3526ac3f9 (6.5), b7cf4ec03 (6.5)
Description
To reproduce, build attached example. The resulting qmldir file contains Internal.qml both as a normal type and also as an internal type.
I guess it is because starting from here, it first writes the normal stuff, then the internal line after the loop.
https://code.qt.io/cgit/qt/qtdeclarative.git/tree/src/qml/Qt6QmlMacros.cmake#n2109
A side note: should singleton also be possible for internal there
Attachments
Issue Links
- resulted in
-
QTCREATORBUG-28755 qmldir parser shoud allow versioned internal types
- Closed