qmldir parser: Handle internal types with versions

There is no reason why internal types cannot have versions.

Pick-to: 6.5
Task-number: QTBUG-110815
Change-Id: I7fa9790dc64dd785fc08ec7b22f68b4f961fdb00
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>